[project]
name = "kb25pkuser36"
version = "0.1.0"
description = ""
authors = [
    {name = "yujeong",email = "microyuj99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

